<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cn.jamie</groupId>
    <artifactId>dlscorridor</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>dlscorridor</name>
    <description>dlscorridor</description>
    <packaging>pom</packaging>
    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <spring.boot.version>3.2.3</spring.boot.version>
    </properties>
    <modules>
        <module>dlscorridor-core</module>
        <module>discorridor-demo-api</module>
        <module>dlscorridor-demo-provider</module>
        <module>dlscorridor-demo-consumer</module>
        <module>discorridor-spring-boot</module>
    </modules>

</project>
